# docs/swagger.json
@@ -8,6 +8,39 @@
     },
     "basePath": "/einvoice",
     "paths": {
+        "/cn/events": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Credit Note"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dbmodel.INTF_INT_EINVOICE_EVENTS"
+                        }
+                    }
+                }
+            }
+        },
+        "/cn/xml": {
+            "get": {
+                "produces": [
+                    "text/xml"
+                ],
+                "tags": [
+                    "Credit Note"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/invoice/events": {
             "get": {
                 "produces": [
